[tool.poetry]
name = "hw3-app"
version = "0.1.0"
description = ""
authors = ["minnochka <bogacheva.minna@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
